# C-_OOP_Codes

./: CMakeLists.txt  README.md  main.cpp
ExercisesForPartialExam/: Task1.cpp  Task10.cpp  Task11.cpp  Task12.cpp  Task19.cpp  Task2.cpp  Task22.cpp  Task25.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp  Task7.cpp
FirstPartialExam/: Task2.cpp
Lab2/: Task1.cpp  Task2.cpp  Task3.cpp
Lab3/: Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp
Lab4/: Task1.cpp  Task2.cpp
Lab5/: Task1.cpp  Task2.cpp  Task3.cpp
Lab6/: Task1.cpp  Task2.cpp
Lab7/: Task1.cpp  Task2.cpp  Task3.cpp
Lab8/: Task1.cpp  Task2.cpp  Task3.cpp
