cmake_minimum_required(VERSION 3.21)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled main.cpp)

add_executable(Lab2_Task1 Lab2/Task1.cpp)
add_executable(Lab2_Task2 Lab2/Task2.cpp)
add_executable(Lab2_Task3 Lab2/Task3.cpp)
add_executable(ExercisesForPartialExam_Task5 ExercisesForPartialExam/Task5.cpp)
add_executable(Lab3_Task1 Lab3/Task1.cpp)
add_executable(Lab3_Task2 Lab3/Task2.cpp)
add_executable(Lab3_Task3 Lab3/Task3.cpp)
add_executable(Lab3_Task4 Lab3/Task4.cpp)
add_executable(Lab4_Task1 Lab4/Task1.cpp)
add_executable(Lab4_Task2 Lab4/Task2.cpp)
add_executable(Lab5_Task1 Lab5/Task1.cpp)
add_executable(Lab5_Task2 Lab5/Task2.cpp)
add_executable(Lab5_Task3 Lab5/Task3.cpp)
add_executable(Lab6_Task1 Lab6/Task1.cpp)
add_executable(Lab6_Task2 Lab6/Task2.cpp)
add_executable(Lab7_Task1 Lab7/Task1.cpp)
add_executable(Lab7_Task2 Lab7/Task2.cpp)
add_executable(Lab7_Task3 Lab7/Task3.cpp)
add_executable(FirstPartialExam_Task2 FirstPartialExam/Task2.cpp)
add_executable(Lab8_Task1 Lab8/Task1.cpp)
add_executable(Lab8_Task2 Lab8/Task2.cpp)
add_executable(Lab8_Task3 Lab8/Task3.cpp)
add_executable(ExercisesForPartialExam_Task1 ExercisesForPartialExam/Task1.cpp)
add_executable(ExercisesForPartialExam_Task4 ExercisesForPartialExam/Task4.cpp)
add_executable(ExercisesForPartialExam_Task2 ExercisesForPartialExam/Task2.cpp)
add_executable(ExercisesForPartialExam_Task3 ExercisesForPartialExam/Task3.cpp)
add_executable(ExercisesForPartialExam_Task6 ExercisesForPartialExam/Task6.cpp)
add_executable(ExercisesForPartialExam_Task7 ExercisesForPartialExam/Task7.cpp)
add_executable(ExercisesForPartialExam_Task10 ExercisesForPartialExam/Task10.cpp)
add_executable(ExercisesForPartialExam_Task11 ExercisesForPartialExam/Task11.cpp)
add_executable(ExercisesForPartialExam_Task12 ExercisesForPartialExam/Task12.cpp)
add_executable(ExercisesForPartialExam_Task19 ExercisesForPartialExam/Task19.cpp)
add_executable(ExercisesForPartialExam_Task22 ExercisesForPartialExam/Task22.cpp)
add_executable(ExercisesForPartialExam_Task25 ExercisesForPartialExam/Task25.cpp)